<resources>
    <!-- General -->
    <string name="app_name">Hue Edge</string>
    <string name="app_description">Panel to control Philips Hue</string>
    <string name="title_activity_edge_setup">Configure Hue Edge</string>

    <!-- Panel buttons -->
    <string name="button_help_1_text">Quick access</string>
    <string name="button_help_2_text">Lights</string>
    <string name="button_help_3_text">Rooms</string>
    <string name="button_help_4_text">Zones</string>
    <string name="button_help_5_text">Scenes</string>
    <string name="button_edit_text">Edit</string>
    <string name="button_sliders_help_bri">Brightness</string>
    <string name="button_sliders_help_hue">Color</string>
    <string name="button_sliders_help_sat">Saturation</string>
    <string name="button_sliders_help_ct">Temperature</string>
    <string name="button_back_text">Back</string>

    <!-- Other panels -->
    <string name="no_config">No bridge\nconfigured\n\nPress here\nto setup</string>
    <string name="loading">Loading…</string>

    <!-- Categories line -->
    <string name="dots">..........................</string>

    <!-- Fragments and navigation -->
    <string name="setup_button_about">About &amp; Support</string>
    <string name="setup_button_close_about">Close about</string>
    <string name="setup_button_close_help">Close help</string>
    <string name="setup_about_text">Hue Edge v 1.2\nby Nils Trubkin\n\nThank you for purchase\n\nIn case you have any issues or suggestions regarding my app, please don\'t hesitate to contact me at hueedgepanel@gmail.com\n\nI am an independent developer, you are welcome to support my work via PayPal</string>
    <string name="setup_button_license">License</string>
    <string name="setup_button_contact">Contact me</string>
    <string name="setup_button_support">Support via PayPal</string>
    <string name="email">hueedgepanel@gmail.com</string>
    <string name="paypal_url">https://paypal.me/NilsTrubkin?locale.x=en_US</string>
    <string-array name="step_labels">
        <item>Welcome</item>
        <item>Search</item>
        <item>Link</item>
        <item>Setup</item>
        <item>Finish</item>
    </string-array>

    <!-- WelcomeFragment -->
    <string name="fragment_welcome_label">Welcome!\n\nWe need to perform the first time setup\n\nLet\'s connect to your Philips Hue Bridge</string>
    <string name="fragment_welcome_button_search">Search for bridge</string>
    <string name="fragment_welcome_button_manual_ip">Manual IP setup</string>

    <!-- DiscoveryFragment -->
    <string name="fragment_discovery_label_scanning">Scanning the network for Hue Bridges</string>
    <string name="fragment_discovery_label_select">Please select your Hue Bridge</string>
    <string name="fragment_discovery_button_cancel">Cancel search</string>
    <string name="discovery_item_label_id">ID: %1$s</string>

    <!-- ManualFragment -->
    <string name="fragment_manual_label">Please enter the IP address of your Philips Hue Bridge</string>
    <string name="fragment_manual_ip_field">192.168.1.10</string>
    <string name="fragment_manual_button_confirm">Connect to the IP</string>
    <string name="fragment_manual_button_help">Where do I find the IP?</string>
    <string name="fragment_manual_help_text">Open the official Philips Hue app\n\nSelect \'Settings\'\n\nSelect \'Hue Bridges\'\n\nPress the \'i\' symbol next to your bridge\n\nFind the IP address field</string>

    <!-- ErrorFragment -->
    <string name="fragment_error_label">Connecting to the Hue Bridge failed\n\nMake sure that Hue Bridge is on the same network as your device\n\nTry the manual IP setup\n\nIf you believe this is a bug please report</string>
    <string name="fragment_error_button_rerun">Re-run bridge discovery</string>

    <!-- LinkFragment -->
    <string name="fragment_link_label">Press the link button on the Hue Bridge</string>
    <string name="fragment_link_button_cancel">Cancel linking</string>

    <!-- SetupFragment -->
    <string name="fragment_setup_button_quick">Quick setup</string>
    <string name="fragment_setup_button_custom">Leave empty</string>

    <!-- FinalFragment -->
    <string name="fragment_final_label">The setup is complete\nThe Hue Edge panel is ready for use\n\nTap to toggle\n\nHold to adjust\n\nPull-down along the buttons to refresh</string>
    <string name="fragment_final_button_howto">How to use this?</string>
    <string name="fragment_final_button_settings">Preferences</string>

    <!-- ConfirmationFragment -->
    <string name="fragment_confirmation_label">Removing Hue Edge configuration will clear the saved button order. This does not affect your bridge\'s configuration.\n\nAre you sure?</string>
    <string name="fragment_confirmation_button_yes">Yes</string>
    <string name="fragment_confirmation_button_no">No</string>

    <!-- SettingsFragment -->
    <string name="fragment_settings_label">Connection successful!\n\nQuick setup some of your lights or leave the button order empty to configure manually?\n\nYou can always edit the buttons later</string>
    <string name="fragment_settings_seek_bar">Levels of adjustment for sliders\n(Default: 15, 25, 15, 15)</string>
    <string name="fragment_settings_switch_symbols">No symbols (\'◯\' becomes \'Off\')</string>
    <string name="fragment_settings_switch_haptic">No haptic feedback (vibration)</string>
    <string name="fragment_settings_switch_wifi_err_msg">No wifi error messages</string>
    <string name="fragment_settings_switch_legacy_help_view">Legacy menu (left) panel</string>
    <string name="fragment_settings_button_remove">Forget bridge</string>
    <string name="fragment_settings_button_back">Back</string>

    <!-- HowTo -->
    <string name="fragment_howto_text">Swipe from the side to open the edge panel\n\nMake sure that the Hue Edge panel is enabled in the edge panel settings\n\nThe edge panel is accessible even when the phone is locked</string>
    <string name="fragment_howto_button_back">Back</string>
    <string name="fragment_howto_gif_description">Animation illustrating use of edge panel by swiping from side of the phone</string>

    <!-- NotSupportedFragment -->
    <string name="fragment_not_supported_label">We\'re sorry, but it seems that your device does not support the edge panel</string>

    <!-- Edit activity -->
    <string name="button_save_text">Save</string>
    <string name="hue_status">Hue Bridge configured\nIP: %1$s\nPress here to change</string>
    <string name="detailed_under_btn_text">%1$s\n(%2$s)</string>
    <string name="text_review_request">Excuse me for interrupting you\n\nYour opinion of Hue Edge is very important to me\n\nWould you like to leave a quick review letting me know what you like and what you would like to see improved?</string>
    <string name="button_review_never">No, don\'t ask again</string>
    <string name="button_review_later">Ask me later</string>
    <string name="button_review_now">Rate it now</string>

    <!-- Config files -->
    <string name="preference_file_key">HueEdgeConfig</string>
    <string name="recovery_file_key">HueEdgeRecovery</string>

    <!-- SharedPreferences -->
    <string name="preference_no_symbols">noSymbols</string>
    <string name="preference_no_haptic">noHaptic</string>
    <string name="preference_no_wifi_err_msg">noWifiErrMsg</string>
    <string name="preference_legacy_help_view">legacyHelpView</string>
    <string name="preference_bridge_configured">bridgeConfigured</string>
    <string name="preference_bri_levels">briLevels</string>
    <string name="preference_hue_levels">hueLevels</string>
    <string name="preference_sat_levels">satLevels</string>
    <string name="preference_ct_levels">ctLevels</string>
    <string name="preference_ip">savedIp</string>
    <string name="preference_username">savedUsername</string>
    <string name="preference_current_category">currentCategory</string>
    <string name="preference_current_category_sliders">currentCategorySliders</string>
    <string name="preference_tips_shown">tipsShown</string>
    <string name="review_user_saved_times">reviewUserSavedTimes</string>

    <!-- Image description -->
    <string name="pushlink_image_description">A finger pressing on the link button on top of the Philips Hue Bridge</string>
    <string name="ip_help_description">A screenshot displaying the ip and other details of the bridge inside the official Philips Hue app</string>

    <!-- Button symbols -->
    <string name="delete_symbol">—</string>
    <string name="icon_symbol">☼</string>
    <string name="plus_symbol">+</string>
    <string name="on_symbol">|</string>
    <string name="off_symbol">◯</string>

    <!-- Button no-symbols -->
    <string name="some_no_symbol">Some</string>
    <string name="on_no_symbol">On</string>
    <string name="off_no_symbol">Off</string>

    <!-- Toasts -->
    <string name="toast_saved">Saved</string>
    <string name="toast_configuration_deleted">Configuration was deleted</string>
    <string name="toast_old_version">App updated, please re-configure</string>
    <string name="toast_ip_mistake">Please enter the IP address e.g. 192.168.1.10</string>
    <string name="toast_no_lights">Still downloading, wait one moment please</string>
    <string name="toast_no_wifi">No Wi-Fi connection! Please connect to your Wi-Fi</string>
    <string name="toast_timeout_reply">Hue Bridge can not be reached, make sure you are on the same Wi-Fi</string>
    <string name="toast_tips_toggle">Press a button to toggle</string>
    <string name="toast_tips_long">Long-hold a button to adjust</string>
</resources>
