<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/help_view_grey" />

        <Button
            android:id="@+id/btnCategory1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="0dp"
            android:text="@string/button_help_1_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/help_view_grey"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCategory2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="0dp"
            android:text="@string/button_help_2_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/help_view_grey"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCategory3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="0dp"
            android:text="@string/button_help_3_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/help_view_grey"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCategory4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="0dp"
            android:text="@string/button_help_4_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/help_view_grey"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCategory5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="0dp"
            android:text="@string/button_help_5_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/help_view_grey"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>