<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/category_view_root_padding_top"
    tools:ignore="ContentDescription, SpUsage, RtlSymmetry">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/category_btn_height"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSlidersCategory1"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/category_btn_height"
            android:layout_marginBottom="@dimen/category_btn_margin_bottom"
            android:minWidth="@dimen/zero"
            android:padding="@dimen/zero"
            android:text="@string/button_sliders_help_bri"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/category_unselected_gray"
            android:textSize="@dimen/category_btn_text_size" />

        <TextView
            android:id="@+id/btnSlidersCategoryLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:paddingEnd="@dimen/category_btn_padding_end"
            android:text="@string/dots"
            android:textColor="@color/category_selected_white"
            android:textSize="19dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/category_btn_height"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSlidersCategory2"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/category_btn_height"
            android:layout_marginBottom="@dimen/category_btn_margin_bottom"
            android:minWidth="@dimen/zero"
            android:padding="@dimen/zero"
            android:text="@string/button_sliders_help_hue"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/category_unselected_gray"
            android:textSize="@dimen/category_btn_text_size" />

        <TextView
            android:id="@+id/btnSlidersCategoryLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:paddingEnd="@dimen/category_btn_padding_end"
            android:text="@string/dots"
            android:textColor="@color/category_selected_white"
            android:textSize="19dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/category_btn_height"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSlidersCategory3"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/category_btn_height"
            android:layout_marginBottom="@dimen/category_btn_margin_bottom"
            android:minWidth="@dimen/zero"
            android:padding="@dimen/zero"
            android:text="@string/button_sliders_help_sat"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/category_unselected_gray"
            android:textSize="@dimen/category_btn_text_size" />

        <TextView
            android:id="@+id/btnSlidersCategoryLine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:paddingEnd="@dimen/category_btn_padding_end"
            android:text="@string/dots"
            android:textColor="@color/category_selected_white"
            android:textSize="19dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/category_btn_height"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSlidersCategory4"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/category_btn_height"
            android:layout_marginBottom="@dimen/category_btn_margin_bottom"
            android:minWidth="@dimen/zero"
            android:padding="@dimen/zero"
            android:text="@string/button_sliders_help_ct"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/category_unselected_gray"
            android:textSize="@dimen/category_btn_text_size" />

        <TextView
            android:id="@+id/btnSlidersCategoryLine4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:paddingEnd="@dimen/category_btn_padding_end"
            android:text="@string/dots"
            android:textColor="@color/category_selected_white"
            android:textSize="19dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/category_btn_height"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBack"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/category_btn_height"
            android:layout_marginBottom="@dimen/category_btn_margin_bottom"
            android:minWidth="@dimen/zero"
            android:padding="@dimen/zero"
            android:text="@string/button_back_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/category_unselected_gray"
            android:textSize="@dimen/category_btn_text_size" />

    </LinearLayout>

</LinearLayout>