<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="#33FAFAFA"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCategory1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="-7dp"
            android:fontFamily="sans-serif-thin"
            android:minWidth="0dp"
            android:padding="0dp"
            android:text="@string/button_help_1_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#99FAFAFA"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btnCategoryLine1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCategory2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="-7dp"
            android:fontFamily="sans-serif-thin"
            android:minWidth="0dp"
            android:padding="0dp"
            android:text="@string/button_help_2_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#99FAFAFA"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btnCategoryLine2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCategory3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="-7dp"
            android:fontFamily="sans-serif-thin"
            android:minWidth="0dp"
            android:padding="0dp"
            android:text="@string/button_help_3_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#99FAFAFA"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btnCategoryLine3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCategory4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="-7dp"
            android:fontFamily="sans-serif-thin"
            android:minWidth="0dp"
            android:padding="0dp"
            android:text="@string/button_help_4_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#99FAFAFA"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btnCategoryLine4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCategory5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="-7dp"
            android:fontFamily="sans-serif-thin"
            android:minWidth="0dp"
            android:padding="0dp"
            android:text="@string/button_help_5_text"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#99FAFAFA"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btnCategoryLine5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>